Ao focar em qq campo, por padrão, já iniciar com seu conteúdo selecionado (p/ facilitar a edição) (replicar comportamento dos cmapos Idade das Opções)

--- a/src/app/components/administradora/administradora.component.html
+++ b/src/app/components/administradora/administradora.component.html
@@ -70,7 +70,7 @@
           <form #administradoraForm="ngForm">
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
-              <input matInput placeholder="Nome" name="nome" [disabled]="!adicionandoAdministradora() && !editandoAdministradora()"
+              <input matInput #inputNome (focusin)="inputNome.select()" placeholder="Nome" name="nome" [disabled]="!adicionandoAdministradora() && !editandoAdministradora()"
                      [(ngModel)]="AdministradoraEditando.nome" required>
             </mat-form-field>
             <button type="submit" hidden></button>
