--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -75,12 +75,12 @@
           <form #usuarioForm="ngForm">
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
-              <input matInput placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
+              <input matInput #inputNome (focusin)="inputNome.select()" placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
                      [(ngModel)]="usuarioEditando.nome" name="nome" type="text" #nome="ngModel" required>
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Email</mat-label>
-              <input matInput placeholder="Email" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
+              <input matInput #inputEmail (focusin)="inputEmail.select()" placeholder="Email" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
                      [(ngModel)]="usuarioEditando.email" name="email" type="email" #email="ngModel" required>
             </mat-form-field>
             <div [hidden]="!adicionandoUsuario() && !editandoUsuario()">
