--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -144,7 +144,7 @@
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Nome</mat-label>
-            <input matInput (ngModelChange)="filtraTabela()" placeholder="Nome" [(ngModel)]="filtroTabela.nome">
+            <input matInput #inputFiltroNome (focusin)="inputFiltroNome.select()" (ngModelChange)="filtraTabela()" placeholder="Nome" [(ngModel)]="filtroTabela.nome">
           </mat-form-field>
 
           <mat-form-field appearance="outline" style="width: 100%">
@@ -194,24 +194,24 @@
 
             <mat-form-field appearance="outline" style="width: 50%">
               <mat-label>Idade Min.</mat-label>
-              <input matInput [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.idadeMinima" type="number" placeholder="Idade Min.">
+              <input matInput #inputFiltroIdadeMin (focusin)="inputFiltroIdadeMin.select()" [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.idadeMinima" type="number" placeholder="Idade Min.">
             </mat-form-field>
           </div>
 
           <div>
             <mat-form-field appearance="outline" style="width: 33.3%">
               <mat-label>Idade Max.</mat-label>
-              <input matInput [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.idadeMaxima" type="number" placeholder="Idade Max.">
+              <input matInput #inputFiltroIdadeMax (focusin)="inputFiltroIdadeMax.select()" [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.idadeMaxima" type="number" placeholder="Idade Max.">
             </mat-form-field>
 
             <mat-form-field appearance="outline" style="width: 33.3%">
               <mat-label>Qtd. Min. Vidas</mat-label>
-              <input matInput [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.qtdMinVidas" type="number" placeholder="Qtd. Min. Vidas">
+              <input matInput #inputFiltroQtdMinVidas (focusin)="inputFiltroQtdMinVidas.select()" [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.qtdMinVidas" type="number" placeholder="Qtd. Min. Vidas">
             </mat-form-field>
 
             <mat-form-field appearance="outline" style="width: 33.3%">
               <mat-label>Qtd. Min. Titulares</mat-label>
-              <input matInput [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.qtdMinTitulares" type="number" placeholder="Qtd. Min. Titulares">
+              <input matInput #inputFiltroQtdMinTitulares (focusin)="inputFiltroQtdMinTitulares.select()" [disabled]="!filtroTabela.tipoFiltro" (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.qtdMinTitulares" type="number" placeholder="Qtd. Min. Titulares">
             </mat-form-field>
           </div>
 
@@ -266,7 +266,7 @@
 
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Estado</mat-label>
-              <input matInput name="estado" [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text" required>
+              <input matInput #inputEstado (focusin)="inputEstado.select()" name="estado" [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
                 <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
                   {{estado.nome}}
@@ -276,12 +276,12 @@
 
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
-              <input matInput name="nome" placeholder="Nome" [(ngModel)]="tabelaEditando.nome" [disabled]="!adicionandoTabela() && !editandoTabela()" required>
+              <input matInput #inputNome (focusin)="inputNome.select()" name="nome" placeholder="Nome" [(ngModel)]="tabelaEditando.nome" [disabled]="!adicionandoTabela() && !editandoTabela()" required>
             </mat-form-field>
 
             <mat-form-field *ngIf="isCategoriaAdesao()" appearance="outline" style="width: 100%">
               <mat-label>Administradora</mat-label>
-              <input matInput name="administradora" [formControl]="administradoraAutoCompleteControl" [matAutocomplete]="auto2" type="text" [required]="isCategoriaAdesao()">
+              <input matInput #inputAdministradora (focusin)="inputAdministradora.select()" name="administradora" [formControl]="administradoraAutoCompleteControl" [matAutocomplete]="auto2" type="text" [required]="isCategoriaAdesao()">
               <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="administradoraDisplayFn">
                 <mat-option *ngFor="let administradora of administradoraFilteredOptions | async" [value]="administradora">
                   {{administradora.nome}}
@@ -291,7 +291,7 @@
 
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Operadora</mat-label>
-              <input name="operadora" (ngModelChange)="carregaTabelaProdutoPorOperadora()" matInput [formControl]="operadoraAutoCompleteControl" [matAutocomplete]="auto3" type="text" required>
+              <input matInput #inputOperadora (focusin)="inputOperadora.select()" name="operadora" (ngModelChange)="carregaTabelaProdutoPorOperadora()" [formControl]="operadoraAutoCompleteControl" [matAutocomplete]="auto3" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto3="matAutocomplete" [displayWith]="operadoraDisplayFn">
                 <mat-option *ngFor="let operadora of operadoraFilteredOptions | async" [value]="operadora">
                   {{operadora.nome}}
@@ -300,7 +300,7 @@
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Reajuste</mat-label>
-              <input matInput name="reajuste" [formControl]="reajusteAutoCompleteControl" [matAutocomplete]="auto4" type="text" required>
+              <input matInput #inputReajuste (focusin)="inputReajuste.select()" name="reajuste" [formControl]="reajusteAutoCompleteControl" [matAutocomplete]="auto4" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto4="matAutocomplete" [displayWith]="reajusteDisplayFn">
                 <mat-option *ngFor="let reajuste of reajusteFilteredOptions | async" [value]="reajuste">
                   {{reajuste}}
@@ -310,24 +310,24 @@
             <div>
               <mat-form-field appearance="outline" style="width: 50%">
                 <mat-label>Idade Min.</mat-label>
-                <input type="number" name="idadeMinima" matInput placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                <input matInput #inputIdadeMinima (focusin)="inputIdadeMinima.select()" type="number" name="idadeMinima" placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
                        [(ngModel)]="tabelaEditando.idadeMinima" required>
               </mat-form-field>
               <mat-form-field appearance="outline" style="width: 50%">
                 <mat-label>Idade Max.</mat-label>
-                <input type="number" name="idadeMaxima" matInput placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                <input matInput #inputIdadeMaxima (focusin)="inputIdadeMaxima.select()" type="number" name="idadeMaxima" placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
                        [(ngModel)]="tabelaEditando.idadeMaxima" required>
               </mat-form-field>
             </div>
             <div>
               <mat-form-field appearance="outline" style="width: 50%">
                 <mat-label>Qtd Min. Vidas</mat-label>
-                <input type="number" name="qtdMinVidas" matInput placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                <input matInput #inputQtdMinVidas (focusin)="inputQtdMinVidas.select()" type="number" name="qtdMinVidas" placeholder="Idade Minima" [disabled]="!adicionandoTabela() && !editandoTabela()"
                        [(ngModel)]="tabelaEditando.qtdMinVidas" required>
               </mat-form-field>
               <mat-form-field appearance="outline" style="width: 50%">
                 <mat-label>Qtd Min. Titulares</mat-label>
-                <input type="number" name="qtdMinTitulares" matInput placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
+                <input matInput #inputQtdMinTitulares (focusin)="inputQtdMinTitulares.select()" type="number" name="qtdMinTitulares" placeholder="Idade Maxima" [disabled]="!adicionandoTabela() && !editandoTabela()"
                        [(ngModel)]="tabelaEditando.qtdMinTitulares" required>
               </mat-form-field>
             </div>
