--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -380,7 +380,7 @@
                   <mat-label>Filtro</mat-label>
                   <input matInput (keyup)="applyFilterProduto($event)" placeholder="Filtro" #inputFiltroProduto>
                 </mat-form-field>
-                <mat-table #sortProduto="matSort" [dataSource]="dataSourceProduto" matSort class="mat-elevation-z8">
+                <mat-table matSort #sortProduto="matSort" [dataSource]="dataSourceProduto" matSortActive="selected" matSortDirection="desc" class="mat-elevation-z8">
                   <ng-container matColumnDef="idProduto">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
                     <mat-cell *matCellDef="let produto" (click)="produto.selected = !produto.selected" class="mouse-pointer"> {{produto.id}} </mat-cell>
@@ -432,7 +432,7 @@
                   <mat-label>Filtro</mat-label>
                   <input matInput (keyup)="applyFilterEntidade($event)" placeholder="Filtro" #inputFiltroEntidade>
                 </mat-form-field>
-                <mat-table #sortEntidade="matSort" [dataSource]="dataSourceEntidade" matSort class="mat-elevation-z8">
+                <mat-table matSort #sortEntidade="matSort" [dataSource]="dataSourceEntidade" matSortActive="selected" matSortDirection="desc" class="mat-elevation-z8">
                   <ng-container matColumnDef="idEntidade">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
                     <mat-cell *matCellDef="let produto" (click)="produto.selected = !produto.selected" class="mouse-pointer"> {{produto.id}} </mat-cell>
