--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -175,7 +175,7 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="outline" style="width: 100%">
+          <mat-form-field *ngIf="filtroTabela.categoria === 'Adesão'" appearance="outline" style="width: 100%">
             <mat-label>Profissão</mat-label>
             <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.profissoes" multiple>
               <mat-option *ngFor="let profissao of todasProfissoes;" [value]="profissao">{{profissao.nome}}</mat-option>
