--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -270,7 +270,7 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="outline" style="width: 100%">
+          <mat-form-field *ngIf="filtroOpcao.categoria === 'Adesão'" appearance="outline" style="width: 100%">
             <mat-label>Profissão</mat-label>
             <mat-select (ngModelChange)="filtraOpcao()" [(ngModel)]="filtroOpcao.profissoes" multiple>
               <mat-option *ngFor="let profissao of todasProfissoes;" [value]="profissao">{{profissao.nome}}</mat-option>
